Fix the parsing of the SSLv2 alias This required changes to how the ciphers were read from OpenSSL in the unit tests to differentiate those ciphers with the same name but different protocol level support.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1615205 13f79535-47bb-0310-9956-ffa450edef68